LSP Completion: use textEdit.newText as a workaround

Some LSP server implementation, such as rust-analyzer 2021-11-01,
do not use insertText field, but uses textEdit.

Since we don't have real support for textEdit (see Commit 831a0069),
the field textEdit.newText is used as a workaround here to prevent
a worse fallback to use label as the inserted text.

BUG: 445085